css/style.css
:root {
    --cell-size: 15vw;
    --grid-columns: 6;
    --grid-rows: 6;
    --back-color: #11191f;
    --blue: #2594f5;
}

* {
    user-select: none;
}

body {
    color: white;
    background-color: #11191f;
    display: flex;
    flex-direction: column;
    align-items: center;
}

h1 {
    text-align: center;
    /* margin: 2vw; */
    margin-bottom: 30px;
    width: 100%;
    transition: all 1s linear; 
}

@media (max-width: 400px) {
    h1 {
        text-align: left;
        margin-bottom: 6vw;
    }
}

.menu {
    position: absolute;
    top: 20px;
    right: 20px;
}

button {
    width: 40px;
    height: 40px;
    color: white;
    background-color: transparent;
    border-radius: 50%;
    border: 2px solid white;
}

#players {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.player-panel {
    border: 2px solid var(--back-color);
}

.player-panel.active {
    border: 2px solid var(--blue);
}

.player-panel {
    width: 40vw;
    max-width: 150px;
    padding: 10px 0px;
    text-align: center;
}

#bth-switch-player {
    /* width: 100px;
    border-radius: 0; */
    /* font-size: 25px;
    font-weight: bolder; */
    width: 20vw;
    max-width: 50px;
    margin: 30px;
    /* padding-top: 0px;
    color:  var(--blue); */
}

@media (max-width: 400px) {
    /* .player-panel {
        width: 30vw;
    } */
    #bth-switch-player {
        /* width: 30px; */
        margin: 5px;
        width: 30px;
    }
  }
  

#board {
    margin-left: auto;
    margin-right: auto;
    display: grid;
    grid-template-columns: repeat(var(--grid-columns), var(--cell-size) [col-start]);
    grid-template-rows: repeat(var(--grid-rows), var(--cell-size) [col-start]);
    border-radius: 100px;
}

#board div {
    width: var(--cell-size);
    height: var(--cell-size);
    border-radius: 50%;
    background-color: transparent;
}

#board div.popped {
    background-color: transparent;
}

#board div.selected {
    background-color: #1c2b36;
}

#board div.untouched {
    background-color: var(--blue);
    width: var(--cell-size);
    height: var(--cell-size);
    max-width: 100px;
    max-height: 100px;
    border-radius: 50%;
    /* position: absolute; */
    box-shadow: 0 0 25px white inset;
}

#board div.untouched:before {
    background: rgba(255, 255, 255, 0.2);
    content: "";
    width: calc(0.4 * var(--cell-size));
    height: calc(0.15 * var(--cell-size));
    position: absolute;
    margin: calc(0.15 * var(--cell-size)) 0 0 calc(0.1 * var(--cell-size));
    border-radius: 50%;
    transform: rotate(-35deg);
}

#message {
    margin: 20px;
}

.info {
    color: white;
}

.warning {
    color: orange;
    font-weight: bold;
}

.error {
    color: red;
    font-weight: bold;
}

.congrats {
    color: greenyellow;
    font-weight: bold;
}

.popup {
    top: 50px;
    position: fixed;
    visibility: hidden;
    width: 80vw;
    height: 80vh; 
    top: 5vh;
    left: 10vw;
    border: 1px solid white;
    background-color: var(--back-color);
}

.popup.visible {
    visibility: visible;
}

.popup>:first-child {
    border-bottom: 1px solid white;
    display: flex;
    justify-content: flex-end;
}

.popup button {
    color: white;
    background-color: transparent;
    font-size: x-large;
    margin: 5px;
    border: none;
    text-decoration: none;
}

#settings {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

#settings>* {
    margin: 20px;
    /* padding: 100px; */
}

#help-popup p {

    font-size: x-large;
}

.content {
    padding: 50px;
    height: 80%;
}

.content input[type="text"]{
    width: 60%;
    max-width: 300px;
}
.content fieldset{
    width: 60%;
    max-width: 300px;
}

